--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body{
   background-color: var(--bg-primary);
   font-family: 'Nunito', sans-serif;
   font-size: 10px;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 *{
   box-sizing: border-box;
@@ -80,6 +80,7 @@ ul{
   display: flex;
   align-items: center;
   padding: 10px;
+  margin-top:20px;
   transition: all ease-in-out 1s;
 }
 .img_profile{
@@ -97,6 +98,10 @@ ul{
   color: #FFFFFF;
   margin-left: 10px;
   text-overflow: clip;
+  line-height: 15px;
+}
+.name__profile{
+  color:#F3F3F3;
 }
 
 
@@ -211,15 +216,14 @@ ul{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: all ease-in-out 3s;
+  transition: all ease-in-out 2s;
 }
 .header__menu{
   display:flex;
   justify-content: flex-end;
   position: relative;
   flex-grow: 1;
-  position: relative;
-  transition: flex-end ease-out 20s;
+  transition: flex-end ease-out 3s;
 }
 .items{
   padding: 0 3em 0 0;
@@ -237,6 +241,7 @@ ul{
   display: inline-flex;
   align-items: center;
   transition: all ease-out 1s;
+  min-width: 200px;
 }
 .search i{
   position: absolute;
@@ -283,17 +288,56 @@ ul{
     justify-content: center;
   }
 }
+/***********END HEADER*************/
 
 /************MAIN***************/
-.main {
+.content {
   grid-area: main;
+  overflow-y: scroll;
+}
+.navbar-responsive{
+  display:flex;
+  margin: 2em;
+}
+#non-display{
+  display: none;
+}
+.navbar-responsive i{
+  font-size: 2em;
+  color: var(--gray)
+}
+#toggle-main{
+  display:none;
+}
+#toggle-main:checked + .main__navigation{
+  display:flex;
+}
+.main__navigation{
+  align-items: center;
+  flex-direction:column;
+  transition: all ease-in 4s;
 }
 
-.main__navigation{
-  margin-top: 2em;
-}
 .nav__link{
   color: var(--gray);
-  font-size: 2.2em;
+  font-size: 2em;
   padding: 10px;
+}
+@media screen and (max-width:576px){
+  .navbar-responsive{
+    flex-direction: column;
+    align-items: center;
+  }
+  #non-display{
+    display: block;
+  }
+  .main__navigation{
+    display:none;
+  }
+  .nav__link{
+    font-size: 1.5em;
+  }
+}
+.main{
+  margin-top:20px;
 }
